--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@types/node": "^20.14.10"
   }
 }
