--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "lucide-react": "^0.446.0",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.35.1",
     "vite": "^5.4.1"
   }
 }
